--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=hd
 spring.datasource.password=
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.generate-ddl=true
