--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=hd
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
+spring.resources.static-locations=classpath:static/
 #spring.jpa.generate-ddl=true
