--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
 - changeSet:
-    id: 1644404058305-1
+    id: 1644558758874-1
     author: hd (generated)
     changes:
     - createTable:
@@ -10,11 +10,11 @@ databaseChangeLog:
               nullable: false
               primaryKey: true
               primaryKeyName: response_pkey
-            name: id
+            name: response_id
             type: BIGINT
         tableName: response
 - changeSet:
-    id: 1644404058305-2
+    id: 1644558758874-2
     author: hd (generated)
     changes:
     - createTable:
@@ -27,7 +27,7 @@ databaseChangeLog:
             name: response_id
             type: BIGINT
         - column:
-            name: value
+            name: response_value
             type: VARCHAR(255)
         - column:
             constraints:
@@ -38,7 +38,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: response_values
 - changeSet:
-    id: 1644404058305-3
+    id: 1644558758874-3
     author: hd (generated)
     changes:
     - createTable:
@@ -69,7 +69,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: field
 - changeSet:
-    id: 1644404058305-4
+    id: 1644558758874-4
     author: hd (generated)
     changes:
     - createTable:
@@ -98,7 +98,7 @@ databaseChangeLog:
             type: VARCHAR(255)
         tableName: users
 - changeSet:
-    id: 1644404058305-5
+    id: 1644558758874-5
     author: hd (generated)
     changes:
     - createTable:
@@ -113,7 +113,7 @@ databaseChangeLog:
             type: VARCHAR(255)
         tableName: field_options
 - changeSet:
-    id: 1644404058305-6
+    id: 1644558758874-6
     author: hd (generated)
     changes:
     - addForeignKeyConstraint:
@@ -122,13 +122,13 @@ databaseChangeLog:
         constraintName: fkfadmw7ujeanb04rb41pse8psq
         deferrable: false
         initiallyDeferred: false
-        onDelete: NO ACTION
+        onDelete: CASCADE
         onUpdate: NO ACTION
-        referencedColumnNames: id
+        referencedColumnNames: response_id
         referencedTableName: response
         validate: true
 - changeSet:
-    id: 1644404058305-7
+    id: 1644558758874-7
     author: hd (generated)
     changes:
     - addForeignKeyConstraint:
@@ -143,7 +143,7 @@ databaseChangeLog:
         referencedTableName: field
         validate: true
 - changeSet:
-    id: 1644404058305-8
+    id: 1644558758874-8
     author: hd (generated)
     changes:
     - addForeignKeyConstraint:
@@ -158,7 +158,7 @@ databaseChangeLog:
         referencedTableName: users
         validate: true
 - changeSet:
-    id: 1644404058305-9
+    id: 1644558758874-9
     author: hd (generated)
     changes:
     - addForeignKeyConstraint:
@@ -173,7 +173,7 @@ databaseChangeLog:
         referencedTableName: field
         validate: true
 - changeSet:
-    id: 1644404058305-10
+    id: 1644558758874-10
     author: hd (generated)
     changes:
     - createSequence:
