--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=hd
-spring.datasource.password=
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=hd
+#spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
-spring.resources.static-locations=classpath:static/
+#spring.resources.static-locations=classpath:static/
 #spring.jpa.generate-ddl=true
