--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 	implementation 'org.springframework:spring-messaging'
 	///implementation('org.liquibase:liquibase-core')
 
-	implementation 'org.liquibase:liquibase-core'
+	//implementation 'org.liquibase:liquibase-core'
 }
 
 test {
