--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
@@ -7,3 +8,4 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 #spring.jpa.hibernate.ddl-auto=none
 #spring.resources.static-locations=classpath:static/
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
