--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=hd
 #spring.datasource.password=
