--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=hd
 #spring.datasource.password=
