--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.postgresql:postgresql'
@@ -52,8 +53,13 @@ dependencies {
 	implementation 'org.hibernate:hibernate-validator:7.0.2.Final'
 	//implementation 'org.springframework:spring-websocket'
 	implementation 'org.springframework:spring-messaging'
-	///implementation('org.liquibase:liquibase-core')
-	implementation 'org.liquibase:liquibase-core'
+	//implementation 'org.liquibase:liquibase-core'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+	implementation 'org.springdoc:springdoc-openapi-security:1.6.6'
+	implementation('org.springframework.boot:spring-boot-starter-validation')
+
+	testImplementation 'com.h2database:h2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
